finished UI changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
 
       <div class="command__bar">
-        <select class="sort hover__state" name="sorting__values">
+        <select class="sort" name="sorting__values">
           <option selected="selected" hidden>Sort by</option>
           <option value="distance">distance</option>
           <option value="duration">duration</option>
